Fixed flickering of Sommaire

--- a/css/master.css
+++ b/css/master.css
@@ -20,7 +20,7 @@ h1 h2 {
 }
 
 #sommaire {
-    width: 15%;
+    width: 16%;
     height: 600px;
     float: left;
     background-color: #373737;
